--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.54.0",
+    "axios": "^1.9.0",
     "next": "15.3.4"
   },
   "devDependencies": {
